--- a/src/components/common/SearchForm/index.module.css
+++ b/src/components/common/SearchForm/index.module.css
@@ -243,7 +243,7 @@
   }
   .homeReservation .reservationForm{
     padding: 20px;
-    box-shadow: 0px 20px 50px 0px rgba(117, 128, 139, 0.10), 0px 20px 50px 0px rgba(117, 128, 139, 0.10);
+    box-shadow: 0 20px 50px 0 rgba(117, 128, 139, 0.10), 0 20px 50px 0 rgba(117, 128, 139, 0.10);
     border-radius: 24px;
     width: calc( 100% - 40px );
     margin: 50px 20px;
